# llm-eval-kit

./: .gitignore  CONTRIBUTING.md  README.md  linkedin-post.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  index.html
examples/: demo.py  eval_suite.yaml
src/llm_eval_kit/: __init__.py  cli.py  compare.py  eval_runner.py  logger.py  scorer.py
src/llm_eval_kit/checks/: __init__.py  base.py  completeness.py  consistency.py  freshness.py  hallucination.py  json_validity.py  length.py  pii.py  placeholder.py  style.py  toxicity.py
src/llm_eval_kit/judges/: __init__.py  llm_judge.py  pairwise.py  rubric.py
src/llm_eval_kit/reporters/: __init__.py  html.py  markdown.py
tests/: test_compare_and_reports.py  test_eval_runner.py  test_logger.py  test_new_checks.py  test_scorer.py
